<resources>
    <string name="app_name">Kotlin project</string>
    <string name="hello_android">Hello Android!</string>
    <string name="click_me">Click me!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go_to_register">Don\'t have an account? Register here</string>
    <string name="register">Register</string>
    <string name="go_to_login">Already have an account? Login here</string>
    <string name="name">Name</string>
    <string name="welcome_to_admin_dashboard">Welcome to admin dashboard</string>
    <string name="logout">Logout</string>
</resources>